app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

@import "materialize-css/dist/css/materialize";
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@400;500&display=swap');

 body, html {
   font-family: "Noto sans Display", "Helvetica", "Arial", sans-serif;
   margin: 0;
   padding: 0;
   background: #740c94;
 }

 body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
 }

 main {
   flex: 1 0 auto;
 }

 h3 {
   margin: 0 0 1.7rem 0;
   font-weight: 600;
   font-size: 1.7rem;
 }

 h4 {
   margin: 0 0 1em 0;
   font-weight: 600;
   font-size: 1.3rem;
 }

 strong {
   font-weight: 600;
 }

 .card-table td {
   padding: 1.5em 0 0 0;
 }

 .page-footer {
   background: #00BCD2;
   font-size: 0.8em;
   margin: 0;
   padding: 1em  0;
 }

 .no-margin-bottom { margin-bottom: 0px !important }

 .container.main-container {
   min-height: 100vh;
   background: #740c94;
 }

 .public-container {
   min-height: 100vh;
   margin-bottom: 4em;
 }

 a {
   color: #000;
 }

 .devise-shared-links a {
   font-size: 12.5px;
 }

 #card_entries {
   // border: 1px solid #000;
 }

 .public-container .bingo-card-title {
   background: #1b1b1b;
   border-top-left-radius: 1em;
   border-top-right-radius: 1em;

   h3 {
     font-size: 2rem;
     color: #fff;
     margin: 0 auto;
     text-align: center;
     padding: 0.5em 0 0.25em 0;
   }
 }

 .card-panel {
   background: #ff9aac;
   border-radius: 4px;
 }

 .actions {
   padding-top: 1em;
 }

 label {
   color: #000;
 }

 .logo {
   display: block;
   margin: 1em 0;
   background: image-url('logo.png') 0 0 no-repeat;
   background-size: contain;
   background-position: center;
   width: 100%;
   height: 10em;
 }

 .logo.small {
   height: 5em;
 }

 .logo.logged-in {
   margin-top: 0;
   height: 100px;
 }

 .btn {
   background: #740c94;
 }

 table .btn {
   text-transform: lowercase;
   margin: 4px 0;
 }

 textarea {
   height: 20rem;
 }

 .navbar-text {
   color: #fff;
 }

 textarea,
 input[type=text],
 input[type=email],
 input[type=password] {
   font-size: 1rem;
   background-color: #fff !important;
   border-radius: 4px !important;
   border-bottom: 0 !important;
   box-sizing: border-box !important;
   padding: 0.2rem 1rem !important;
 }

 textarea {
   padding: 1em !important;
 }

 textarea:focus, input:focus{
   outline: none;
 }

 .bingo-card-container {
   margin: 0 auto;
   width: 78vh; /* it's a square */
 }

 .square-container {
   display: grid;
   grid-template-columns:repeat(5,1fr);
   grid-gap: 0.5em;
   background: #1b1b1b;
   padding: 1em;
   border-bottom-left-radius: 1em;
   border-bottom-right-radius: 1em;
 }

 .square {
   border: 1px solid;
   aspect-ratio:1/1;
   overflow: hidden;
   background: #fff;
   padding: 0.5em;
   font-size: 1.4vh;
   line-height: 1.4vh;
   display: flex;
   padding: 2px;
   justify-content: center; /* align horizontal */
   align-items: center; /* align vertical */
   position: relative;
 }

 .bingo-card__checkbox:before {
   content: "•";
   position: absolute;
   color: black;
   left: -0.2%;
   top: -124%;
   color: red;
   font: 43vh "Caveat Brush";
   opacity: 0.7;
 }

 .bingo-card-square {
   & .bingo-card__checkbox {
     display: none;
   }

   &.active .bingo-card__checkbox {
     display: block;
   }
 }

 /* @TODO collapse to list on mobile */
 // @media screen and (max-width: 600px) {
   //   .square-container {
     //     grid-template-columns:repeat(1,1fr);
     //     font-size: 12px;
     //   }
     // }


     .xs { font-size: 0.75rem !important }
     .sm { font-size: 0.875rem !important }
     .base { font-size: 1rem !important }
     .lg { font-size: 1.125rem !important }
     .xl { font-size: 1.25rem !important }
     .xl2 { font-size: 1.5rem !important }
     .xl3 { font-size: 1.875rem !important }
     .xl4 { font-size: 2.25rem !important }
     .xl5 { font-size: 3rem !important }
     .xl6 { font-size: 4rem !important }
     .fs1 { font-size: 1vw !important }
     .fs2 { font-size: 1.4vw !important }
     .fs3 { font-size: 1.6vw !important }
     .fs4 { font-size: 1.8vw !important }
     .fs5 { font-size: 2vw !important }
     .fs6 { font-size: 2.2vw !important }
     .fs7 { font-size: 2.4vw !important }
     .fs8 { font-size: 2.6vw !important }

